# nndl-practice

./: .gitignore  README.md  _meta.yml
chap11_gaussian_mixture/: Gmm_implementation.ipynb
chap12_RBM/: rbm.py
chap12_RBM/rbm_output/: rbm_model.npz
chap14_reinforcement_learning/: RL_QG_agent.py  simple_test.py
chap14_reinforcement_learning/Reversi/: checkpoint  parameter.ckpt.index
chap1_warmup/: numpy_ tutorial.ipynb  pyproject.toml
chap2_linear_regression/: README.md  exercise-linear_regression.ipynb
chap3_SVM/: svm.py
chap3_softmax_regression/: README.md  softmax_regression-exercise.ipynb
chap4_ simple neural network/: function_fitting_predictions.csv  function_fitting_relu.py  function_fitting_report.md  main.py  pyproject.toml  tf2.0-exercise.ipynb  tutorial_minst_fnn-numpy-exercise.ipynb  tutorial_minst_fnn-tf2.0-exercise.ipynb
chap5_CNN/: CNN_pytorch.ipynb  CNN_tensorflow.ipynb  main.py  pyproject.toml  tutorial_cifar10_conv-keras.ipynb  tutorial_mnist_conv-basic.ipynb  tutorial_mnist_conv-keras-sequential.ipynb  tutorial_mnist_conv-keras.ipynb  tutorial_random_filter.ipynb
chap6_RNN/: Learn2Carry-exercise.ipynb  README.md  poem_generation_with_RNN-exercise.ipynb  题目要求
chap6_RNN/tangshi_for_pytorch/: main.py  rnn.py
chap7-seq2seq-and-attention/: sequence_reversal-exercise.ipynb  sequence_reversal_with_attention-exercise.ipynb
legacy/: README.md
legacy/chap2_linear_regression/: linear_regression-ans.ipynb
legacy/chap4_ simple neural network/: README.md  tutorial_minst_fnn-numpy-ans.ipynb  (+1 more)
pytorch/: README.md  requirements.txt
(+62 files in other folders)
